--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head><title>Ciao</title></head>
+  .titolo{ color:blue}
 <body>
   <h1>La nostra pagina web </h1>
   siamo Anna e Mattia xoxo</body>
