--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>La nostra pagina web </h1>
   siamo Anna e Mattia xoxo
-  <img src="fragole.png"/img>
+  <img src="fragole.png"></img>
   </body>
 
 </html>
