--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
 <body>
   <h1>La nostra pagina web </h1>
-  siamo Anna e Mattia xoxo </p>
+  <p>siamo Anna e Mattia xoxo </p>
   <img src="fragole.png"></img>
   </body>
 
