--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>La nostra pagina web </h1>
   <p>siamo Anna e Mattia xoxo </p>
-  <img src="fragole.png"></img>
+  <img src="fragole.png" width=50px height=100px></img>
   </body>
 
 </html>
