--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<head><title>Ciao</title></head>
+<head><title>Fragole di Mattia e Anna</title></head>
   
 <body>
   <h1>La nostra pagina web </h1>
